<resources>
    <string name="app_name">Agenda</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_formulario">FormularioActivity</string>
    <string name="nome">Nome:</string>
    <string name="telefone">Telefone:</string>
    <string name="endereco">Endereço</string>
    <string name="site">Site</string>
    <string name="nota">Nota</string>
    <string name="inserir">Inserir</string>
    <string name="novo">Novo</string>
    <string name="mapa">Mapa</string>
    <string name="enviar_alunos">Sincronizar</string>
    <string name="baixar_provas">Baixar Provas</string>
    <string name="preferencias">Preferências</string>
    <string name="mais_opcoes">Mais opções</string>
</resources>
