<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ListaAlunosActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/menu_novo"
        android:title="@string/novo"
        android:showAsAction="always"/>

    <item android:id="@+id/menu_mapa"
        android:title="@string/mapa"
        android:showAsAction="always"/>

    <item android:id="@+id/menu_enviar_alunos"
        android:title="@string/enviar_alunos"/>

    <item android:id="@+id/menu_receber_provas"
        android:title="@string/baixar_provas"/>

    <item android:id="@+id/menu_preferencias"
        android:title="@string/preferencias"/>
</menu>
